[gd_scene load_steps=36 format=3 uid="uid://b7xasu42a0ylr"]

[ext_resource type="Texture2D" uid="uid://c7j35381uygia" path="res://sprites/chara/blond_guy.png" id="1_c5hxi"]
[ext_resource type="Script" path="res://enemies/mustache_guy.gd" id="1_tedt4"]
[ext_resource type="Shader" path="res://shaders/white.gdshader" id="2_cdchf"]
[ext_resource type="Texture2D" uid="uid://c3eush5m0gsq0" path="res://sprites/weapons/mac_10.png" id="3_6qy8u"]
[ext_resource type="PackedScene" uid="uid://baupl1dmyl6ak" path="res://overlap/player_detection_zone.tscn" id="3_pw8oa"]
[ext_resource type="PackedScene" path="res://system/wanderer_controller.tscn" id="4_gchpc"]
[ext_resource type="PackedScene" uid="uid://bdntrgil5qkgr" path="res://system/stats.tscn" id="6_7dv0k"]
[ext_resource type="PackedScene" path="res://overlap/hurtbox.tscn" id="7_srf5q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x4ldb"]
resource_local_to_scene = true
shader = ExtResource("2_cdchf")
shader_parameter/active = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_npb1w"]
resource_local_to_scene = true
shader = ExtResource("2_cdchf")
shader_parameter/active = false

[sub_resource type="Animation" id="Animation_ix3e6"]
resource_name = "idle_left"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(-16, -15), Vector2(-15, -13), Vector2(-15, -17)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BulletPoint:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11)]
}

[sub_resource type="Animation" id="Animation_582jq"]
resource_name = "idle_right"
length = 0.45
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(16, -13), Vector2(15, -12), Vector2(16, -13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BulletPoint:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11)]
}

[sub_resource type="Animation" id="Animation_lgj0m"]
resource_name = "idle_up"
length = 0.45
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(11, -16), Vector2(11, -15), Vector2(10, -18)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.5708]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BulletPoint:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(12, -23), Vector2(12, -22), Vector2(12, -25)]
}

[sub_resource type="Animation" id="Animation_v0k5r"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-14, -15), Vector2(-18, -14), Vector2(-15, -12), Vector2(-18, -14)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-0.510239]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BulletPoint:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11)]
}

[sub_resource type="Animation" id="Animation_to15k"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [-0.531267, 0.259117, 0.395892, 0.393238]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(7, -15), Vector2(16, -16), Vector2(13, -16), Vector2(15, -13)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BulletPoint:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_idrvo"]
_data = {
"idle_left": SubResource("Animation_ix3e6"),
"idle_right": SubResource("Animation_582jq"),
"idle_up": SubResource("Animation_lgj0m"),
"walk_left": SubResource("Animation_v0k5r"),
"walk_right": SubResource("Animation_to15k")
}

[sub_resource type="Animation" id="Animation_p2842"]
resource_name = "start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_xeqfb"]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8d1b0"]
_data = {
"start": SubResource("Animation_p2842"),
"stop": SubResource("Animation_xeqfb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kgaht"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wqkpx"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_udpq7"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jefgx"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_q4d6d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kgaht")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_wqkpx")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_udpq7")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_jefgx")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2htgs"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jj2la"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_885xm"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_472ev"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_n0h2m"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2htgs")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_jj2la")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_885xm")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_472ev")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a1iro"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8du8t"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wuoa0"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_q4d6d")
states/Idle/position = Vector2(448, 100.222)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_n0h2m")
states/Walk/position = Vector2(601.333, 99.1852)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_a1iro"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_8du8t")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tnea1"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3jdcr"]
radius = 170.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yxfxj"]

[node name="MustacheGuy" type="CharacterBody2D" node_paths=PackedStringArray("animation_tree", "player_detection_zone", "wanderer_controller", "stats", "hurtbox", "blink_animation_player")]
y_sort_enabled = true
script = ExtResource("1_tedt4")
MIN_DISTANCE_FROM_PLAYER = 50
animation_tree = NodePath("AnimationTree")
player_detection_zone = NodePath("PlayerDetectionZone")
wanderer_controller = NodePath("WandererController")
stats = NodePath("Stats")
hurtbox = NodePath("Hurtbox")
blink_animation_player = NodePath("BlinkAnimationPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_x4ldb")
texture = ExtResource("1_c5hxi")
offset = Vector2(0, -20)
hframes = 3
vframes = 5
frame = 12

[node name="BulletPoint" type="Marker2D" parent="."]
position = Vector2(0, -11)

[node name="Weapon" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_npb1w")
position = Vector2(-16, -15)
texture = ExtResource("3_6qy8u")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_idrvo")
}

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8d1b0")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_wuoa0")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tnea1")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("3_pw8oa")]
position = Vector2(0, -17)

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_3jdcr")

[node name="WandererController" parent="." instance=ExtResource("4_gchpc")]

[node name="ProjectileTimer" type="Timer" parent="."]
one_shot = true

[node name="Stats" parent="." instance=ExtResource("6_7dv0k")]
max_health = 10

[node name="Hurtbox" parent="." instance=ExtResource("7_srf5q")]
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_yxfxj")

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
